Fix landing page, delete method and add more error handling
